Minor layout bug fix

--- a/styles.css
+++ b/styles.css
@@ -73,22 +73,18 @@
 
 /* Body stuff */
 .body{
-    display: grid;
-    grid-template-columns: 0.2fr 5fr 1fr;
-    grid-template-rows: 0.05fr 1fr;
+    display: flex;
 }
 
 .title-text{
-    grid-column: 1/4;
     display: flex;
-    align-items: center;
     border: 2px solid yellow;
 }
 
 .body-container{
     display: flex;
-    width: inherit;
-    grid-column: 1/4;
+    flex-direction: column;
+    width: 70%;
     border: 5px solid pink;
 }
 
@@ -96,8 +92,7 @@
     display: grid;
     justify-content: center;
     padding: 1%;
-    height: inherit;
-    width: 75%;
+    height: 100%;
     grid-template-columns: repeat(auto-fit, minmax(275px, 350px));
     grid-template-rows: repeat(auto-fit, minmax(150px, 200px));
     gap: 3%;
@@ -110,7 +105,7 @@
 }
 
 .right-body-container{
-    width: 25%;
+    width: 30%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
@@ -134,6 +129,5 @@
 }
 .card{
     border: 3px solid orange;
-    width: inherit;
     height: 100%;
 }
